CSS Spacing Fix

--- a/static/search-coveo.css
+++ b/static/search-coveo.css
@@ -79,3 +79,7 @@
   font-size: 15px !important;
   font-weight: 700 !important;
 }
+
+.CoveoQueryDuration::before {
+  content: " ";
+}
